# anchor-viz

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/actions/: action.yaml
.github/workflows/: rust.yml
programs/test_0/: Anchor.toml
programs/test_0/programs/test_0/: Cargo.toml
programs/test_0/programs/test_0/src/: lib.rs
programs/test_0/tests/: test_0.ts
programs/test_1/: Anchor.toml
programs/test_1/programs/test_1/: Cargo.toml
programs/test_1/programs/test_1/src/: lib.rs
programs/test_1/tests/: test_1.ts
src/: main.rs  viz.rs
