[package]
name = "anchor-viz"
version = "0.22.1"
authors = ["cavemanloverboy <caveycool@gmail.com>"]
edition = "2021"
license = "MIT"
description = "This crate pairs well with anchor-lang. It generates an executable which generates visualizations of the instructions of an anchor program."

[[bin]]
name = "anchor-viz"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
anchor-syn = { version = "0.22.0", features = ["idl", "init-if-needed"] }
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
serde_json = "1.0"
plotters = "0.3.1"
plotters-backend = "0.3.1"
shellexpand = "2.1.0"
anchor-client = "0.22.0"
toml = "0.5.8"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
solana-sdk = "1.8.5"
solana-program = "1.8.5"
solana-client = "1.8.5"
dirs = "3.0"
heck = "0.3.1"
flate2 = "1.0.19"
rand = "0.7.3"
tar = "0.4.35"
reqwest = { version = "0.11.4", features = ["multipart", "blocking"] }
tokio = "1.0"
pathdiff = "0.2.0"
cargo_toml = "0.9.2"
walkdir = "2"
chrono = "0.4.19"